--- a/backends/user-service/Makefile
+++ b/backends/user-service/Makefile
@@ -1,3 +1,18 @@
+DB_USER := $(or $(DB_USER),root)
+DB_PASSWORD := $(or $(DB_PASSWORD),rootPassword)
+DB_NAME := $(or $(DB_NAME),stori_service)
+DB_HOST := $(or $(DB_HOST),localhost)
+DB_PORT := $(or $(DB_PORT),5432)
+
+createdb:
+	psql -U $(DB_USER) -h $(DB_HOST) -p $(DB_PORT) -c "CREATE DATABASE $(DB_NAME);"
+
+migrate:
+	export PGPASSWORD=$(DB_PASSWORD); \
+	for file in database/V*; do \
+		psql -U $(DB_USER)  -h $(DB_HOST) -p $(DB_PORT) -d $(DB_NAME) -a -f $$file; \
+	done
+
 generate:
 	go generate ./...
 
@@ -13,3 +28,4 @@ tidy:
 
 run:
 	go run main.go
+
