Initialize transaction-service with foundational setup and CRUD operations
This commit marks the initial setup of the transaction-service, establishing its fundamental structure and capabilities for managing transaction data. Key components introduced include:

- Configuration and environmental setup, including .env and Makefile for streamlined development and deployment processes.
- Core functionalities and APIs for transaction management:
  - Creation and retrieval of transactions (create_transaction.go, get_transaction_by_userId.go)
  - Handling of transaction balances and movements (get_balance_by_user_id.go, get_movement_by_id.go)
- Database schema for transactions (V1_create_transaction.sql), setting the groundwork for data persistence.
- Domain models and repository patterns for robust data handling and abstraction (transaction_domain.go, postgres_transaction_repository.go).
- HTTP handlers for transaction-related endpoints, enhancing the service's RESTful interface (transaction_get.go, transaction_post.go).
- Removal of outdated core service logic, replaced by modular and specific application logic files.
- Logging and error handling configurations for improved monitoring and debugging capabilities.
- Docker-compose.yml modification to include transaction-service, facilitating local development and testing.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,28 @@
 version: "3"
 services:
+  postgres:
+    image: postgres:latest
+    container_name: postgres
+    deploy:
+      endpoint_mode: dnsrr
+    networks:
+      stori-internal:
+        aliases:
+          - dbpostgres
+      stori-external:
+        aliases:
+          - dbpostgres
+  
+    hostname: postgres
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+    restart: unless-stopped
+    environment:
+      POSTGRES_PASSWORD: rootPassword
+      POSTGRES_USER: root
+
   localstack:
     container_name: localstack_stori_solution
     image: localstack/localstack:latest
@@ -7,10 +30,19 @@ services:
       - "4566:4566" # Puerto general de LocalStack para todos los servicios simulados
       - "4571:4571" # Puerto antiguo, mantenido aquí por compatibilidad, pero todo se redirige al 4566 en versiones recientes
     environment:
-      - SERVICES=lambda,s3,ses,sns,sqs,dynamodb
+      - SERVICES=lambda,s3,ses,sns,sqs,rds
       - DEFAULT_REGION=us-east-1
       - DEBUG=1 # Activar esto para depuración, si es necesario
       #- DATA_DIR=/tmp/localstack/data # Para persistencia, si se requiere 
     volumes:
       #- "./localstack:/tmp/localstack" # Mapear este volumen si necesitas persistencia
       - "/var/run/docker.sock:/var/run/docker.sock" # LocalStack utiliza el socket de Docker para algunas operaciones, como invocar Lambdas en contenedores
+
+
+volumes:
+  postgres-data:
+  pgadmin-data:
+
+networks:
+  stori-internal: {}
+  stori-external: {}
