Improve logging and fix Dockerfile configurations
- Add detailed logging across various functions and methods to enhance debugging and operational monitoring in the transaction service.
- Fix Dockerfile configurations for both transaction-service and user-service to resolve build issues and improve container stability.
- Update configuration handling in config.go for better environment variable management.
- Refine transaction handling logic in transaction_domain.go and related files to ensure accurate balance calculations and data integrity.
- Adjust repository layer in postgres_transaction_repository.go and postgres_transaction_balance.go for optimized data access and performance.

--- a/backends/transaction-service/Dockerfile
+++ b/backends/transaction-service/Dockerfile
@@ -1,13 +1,16 @@
-FROM golang:alpine as builder
+FROM golang:alpine AS build
+RUN apk update && apk add git
+RUN mkdir /go/src/app
+ADD . /go/src/app
+WORKDIR /go/src/app
 
-WORKDIR /app
-COPY . /app
-RUN CGO_ENABLED=0 GOOS=linux GOPROXY=https://proxy.golang.org go build -o app cmd/server/main.go
+RUN go mod tidy
+RUN go build -o /go/src/app/main main.go
 
-FROM alpine:latest
-# mailcap adds mime detection and ca-certificates help with TLS (basic stuff)
-RUN apk --no-cache add ca-certificates mailcap && addgroup -S app && adduser -S app -G app
-USER app
-WORKDIR /app
-COPY --from=builder /app/app .
-ENTRYPOINT ["./app"]
+FROM alpine
+COPY --from=build /go/src/app/main /go/src/app/
+COPY --from=build /go/src/app/.env /go/src/app/
+
+COPY swagger.json .
+EXPOSE 8080
+ENTRYPOINT ["/go/src/app/main"]
