--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,18 @@
 version: "3"
 services:
+  proxy: 
+    image: nginx:latest
+    container_name: reverse_proxy
+    restart: always
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+    ports:
+      - "3000:80"
+      - "443:443"
+    networks:
+      - stori-internal
+      - stori-external
+
   postgres:
     image: postgres:latest
     container_name: postgres
@@ -25,19 +38,76 @@ services:
 
   localstack:
     container_name: localstack_stori_solution
-    image: localstack/localstack:latest
+    image: localstack/localstack-pro:latest
     ports:
-      - "4566:4566" # Puerto general de LocalStack para todos los servicios simulados
-      - "4571:4571" # Puerto antiguo, mantenido aquí por compatibilidad, pero todo se redirige al 4566 en versiones recientes
+      - "4566:4566" 
+      - "4571:4571" 
+      - "8055:8080"
     environment:
-      - SERVICES=lambda,s3,ses,sns,sqs,rds
+     
+      - LOCALSTACK_AUTH_TOKEN="ls-wEVULasU-baRO-qiFa-1967-poQIGAZe441e"
       - DEFAULT_REGION=us-east-1
-      - DEBUG=1 # Activar esto para depuración, si es necesario
-      #- DATA_DIR=/tmp/localstack/data # Para persistencia, si se requiere 
-    volumes:
-      #- "./localstack:/tmp/localstack" # Mapear este volumen si necesitas persistencia
-      - "/var/run/docker.sock:/var/run/docker.sock" # LocalStack utiliza el socket de Docker para algunas operaciones, como invocar Lambdas en contenedores
+      - LAMBDA_REMOVE_CONTAINERS=true
+      - DEBUG=1 
+      - PERSISTENCE=1
+      - LAMBDA_DOCKER_NETWORK=stori_stori-internal
 
+    volumes:
+      - "./localstack:/tmp" 
+      - "/var/run/docker.sock:/var/run/docker.sock" 
+    networks:
+      stori-internal:
+        aliases:
+          - localstack
+      stori-external: 
+        aliases:
+          - localstack
+  
+  transaction-service:
+    stdin_open: true
+    restart: always
+    build:
+      context: ./backends/transaction-service
+      dockerfile: Dockerfile
+
+    container_name: transaction-service
+   
+    environment:
+      - DB_USER=root
+      - DB_PASSWORD=rootPassword
+      - DB_HOST=dbpostgres
+      - DB_NAME=stori_service
+      - DB_PORT=5432
+    depends_on:
+      - postgres
+      - proxy
+    networks:
+      stori-internal:
+        aliases:
+          - transaction-service
+  
+  user-service:
+    stdin_open: true
+    restart: always
+    build:
+      context: ./backends/user-service
+      dockerfile: Dockerfile
+
+    container_name: user-service
+  
+    environment:
+      - DB_USER=root
+      - DB_PASSWORD=rootPassword
+      - DB_HOST=dbpostgres
+      - DB_NAME=stori_service
+      - DB_PORT=5432
+    depends_on:
+      - postgres
+      - proxy
+    networks:
+      stori-internal:
+        aliases:
+          - user-service
 
 volumes:
   postgres-data:
@@ -45,4 +115,6 @@ volumes:
 
 networks:
   stori-internal: {}
-  stori-external: {}
+  stori-external: 
+    external: true
+  
